<resources>
    <string name="app_name">AgnitaPaul_Project1</string>
    <string name="viewDetail">View Details</string>
    <string name="about_button_main">About</string>
    <string name="View_Data_main">View The Data</string>
    <string name="View_Recycle_main">View Recycle Data</string>
    <string name="Welcome">Welcome to Medication App</string>
    <string name="name">Name</string>
    <string name="reset_medication">Reset All Medication</string>
    <string name="time">Time</string>
    <string name="day">Day</string>
    <string name="add">Add</string>
    <string name="description">Description</string>
    <string name="content">Content</string>
    <string name="back">Back</string>
    <string name="Med_name">Medication:</string>
    <string name="Med_time">Time:</string>
    <string name="Med_day">Day:</string>
    <string name="Med_des">Description:</string>
    <string name="S_name">Name</string>
    <string name="S_time">Time</string>
    <string name="S_day">Day</string>
    <string name="S_des">Description</string>
    <string name="My_name">Agnita Paul</string>
    <string name="Count">Overall Medicine Number:</string>
    <string name="CountVal">(save value to know)</string>
    <string name="quote">Be Safe Always!</string>
    <string name="My_description">Do you want to keep track of your medication? So this app is for you. Here you can add, update and delete your medication name, time, day, and description. Our main purpose is to keep you healthy about your medication. So here you can add your medication information so that you do not miss taking your medicine.</string>







</resources>