<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_pop">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="169dp"
        android:background="@color/white"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingEnd="25dp"
        android:paddingStart="25dp"
        android:text="@string/content"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/nameLayout_"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginStart="10dp"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewMedicationName_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="15dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/editTextMedicineName_"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_weight="1"
            android:inputType="textPersonName"
            android:textSize="15dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/timeLayout_"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="110dp"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameLayout_"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/timeTitle_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textSize="15dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/editTextTime_"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_weight="1"
            android:inputType="textPersonName"
            android:textSize="15dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/dayLayout_"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeLayout_"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/dayTitle_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day"
            android:textSize="15dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/editTextDay_"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_weight="1"
            android:inputType="textPersonName"
            android:textSize="15dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/descriptionLayout_"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="210dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dayLayout_"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/descriptionTitle_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="15dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/editTextDescription_"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:layout_weight="1"
            android:inputType="textPersonName"
            android:textSize="15dp" />

    </LinearLayout>

    <Button
        android:id="@+id/button_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/add"
        android:paddingEnd="25dp"
        android:paddingStart="25dp"
        android:background="@drawable/button_clr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionLayout_" />


</androidx.constraintlayout.widget.ConstraintLayout>